envoy_bidirectional_stream.yaml
static_resources:
  #A listener is a component that tells Envoy where to listen for incoming connections.
  #This includes the IP address and port number, as well as the protocol (e.g., HTTP, TCP).
  #Listeners are the entry points for traffic into the Envoy proxy.
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: grpc_json
                upgrade_configs:
                  upgrade_type: "websocket"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc_server, timeout: 0s }
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: { }
                              regex: ".*"
                        allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                        allow_headers: "keep-alive,resource,resource-name,authorization,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout"
                        max_age: "1728000"
                        expose_headers: "custom-header1,custom-header2,grpc-status,grpc-message"

                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              disable_stateless_session_resumption: false
              common_tls_context:
                alpn_protocols: "h2"
                tls_certificates:
                  - certificate_chain:
                      filename: "./localhost.crt"   # Replace with your certificate path
                    private_key:
                      filename: "./localhost.key"   # Replace with your private key path



  clusters:
    #Clusters represent upstream services to which Envoy routes requests.
    #A cluster can be a single service or a group of services that provide the same functionality
    #and are load-balanced by Envoy. Clusters are the destinations for requests processed by Envoy.
    - name: grpc_server
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
